# turbofuro

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml  turbofuro_worker.service
.github/workflows/: checks.yaml  docker.yaml  github.yml
omnitool/: .gitignore  Cargo.toml  LICENSE  README.md
omnitool/example/: README.md  index.html  package-lock.json  package.json  vite.config.ts
omnitool/example/src/: AnalyzerView.tsx  analysis-playground.tsx  app.tsx  defaults.tsx  description-playground.tsx  index.css  main.tsx  tel-playground.tsx  welcome.tsx
omnitool/src/: lib.rs
omnitool/tests/: declarations1.json  declarations2.json  declarations3.json  instructions1.json  instructions2.json  instructions3.json  instuctions.rs
scripts/: deploy.sh
tel/: Cargo.toml  README.md
tel-wasm/: Cargo.toml  README.md
tel-wasm/example/: .gitignore  README.md  index.html  package-lock.json  package.json
tel-wasm/example/src/: DescriptionEvaluator.tsx  Evaluator.tsx  app.tsx  index.css  main.tsx
tel-wasm/src/: lib.rs
tel-web/: Cargo.toml  README.md
tel-web/example/: index.html  package-lock.json  package.json
tel-web/example/src/: index.css
tel-web/src/: lib.rs
tel/src/: description.rs  description_notation.rs  lib.rs  operators.rs
tel/tests/: compatiblity.js  compatiblity.rs  conditions.js  conditions.rs  errors.rs  failures.js  failures.rs  modification.js  modification.rs  predicts.js  predicts.rs
turbofuro_runtime/: .gitignore  Cargo.toml
turbofuro_runtime/src/: actor.rs  debug.rs  errors.rs  evaluations.rs  execution_logging.rs  executor.rs  http_utils.rs  lib.rs  resources.rs
turbofuro_runtime/src/actions/: a.json  actors.rs  alarms.rs  convert.rs  crypto.rs  debug.rs  fantoccini.rs  form_data.rs  fs.rs  http_client.rs  http_server.rs  image.rs  kv.rs  libsql.rs  lua.rs  mail.rs  mod.rs  multipart.rs  mustache.rs  ollama.rs  os.rs  postgres.rs  pubsub.rs  redis.rs  regex.rs  sound.rs  sqlite.rs  tasks.rs  time.rs  url.rs  wasm.rs  websocket.rs
turbofuro_runtime/src/modules/: actors.rs  alarms.rs  convert.rs  fantoccini.rs  fs.rs  libsql.rs  lua.rs  mail.rs  mod.rs  mustache.rs  ollama.rs  postgres.rs  redis.rs  wasm-example.wasm  wasm.rs  websocket_server.rs
turbofuro_runtime/src/modules/http_client/: form_data.rs  mod.rs
turbofuro_runtime/src/modules/http_server/: form_data.rs  mod.rs
turbofuro_worker/: Cargo.toml  test_config.json
turbofuro_worker/src/: cli.rs  cloud_agent.rs  cloud_logger.rs  config.rs  environment_resolver.rs  errors.rs  events.rs  main.rs  module_version_resolver.rs  options.rs  shared.rs  tracing_setup.rs  worker.rs
turbofuro_worker/src/cloud/: agent.rs  logger.rs  mod.rs  operator_client.rs
turbofuro_worker/src/utils/: exponential_delay.rs  mod.rs  shutdown.rs  sse_receiver_stream.rs
turbofuro_worker/test_environments/: empty.json
turbofuro_worker/test_module_versions/: 00029d7c-5700-4d66-a28f-44c1d97cfcfa.json  05624c52-d54f-412c-93e8-6f342e8e9bb3.json  23ace28c-84bc-400b-91b6-f83bd575b793.json  37863408-1d22-4da0-9d80-032d27c448a9.json  4e8cdd5a-bb8b-4b26-b274-b4ea299b90c4.json  6df5dedb-8e99-4124-83f2-d709bb5cf08b.json  765d1f8c-ce75-4115-a51d-6cfab4eb8348.json  77236997-0f20-4141-a21c-7f0e88191999.json  8637a531-3cb7-48c1-9ff9-3a5ee0cfe45b.json  86d681cf-eb6e-44b3-95d6-626f4c054ffa.json  950c5d34-36f8-4698-9c24-849ab9768f14.json  a816bac0-336e-4f5c-be43-db999b3e08da.json  actor_demo.json  bda80c5e-3035-4634-bc3a-048fbe2476b4.json  c2dfa57f-e73e-452a-8707-db7a451965ce.json  conditional.json  convert.json  cors.json  crypto.json  echo.json  echo_actor.json  echo_ws.json  f4fe017a-301d-4c00-9a0b-dd269a275dcb.json  http_client.json  http_server.json  http_to_ws.json  http_to_ws_socket.json  kv.json  late.json  loops.json  malformed.json  postgres.json  redis.json  simple.json  sum.json  wasi_demo.json  websocket.json  ws_interval.json
