[workspace.package]
version = "0.1.0"
authors = ["Bartosz Wiśniewski <bartosz.wisniewski@turbofuro.com>"]
repository = "https://github.com/turbofuro/turbofuro"
license = "Apache-2.0"
categories = ["compilers", "web-programming"]
homepage = "https://turbofuro.com"
keywords = ["visual", "language", "worker", "web"]


[workspace]
resolver = "2"

members = ["tel", "turbofuro_worker", "turbofuro_runtime", "omnitool"]
