[package]
name = "tel-wasm"
version = "0.1.16"
edition = "2018"
publish = false
authors = ["Bartosz Wiśniewski <kontakt@pr0gramista.pl>"]
repository = "https://github.com/turbofuro/turbofuro"
license = "Apache-2.0"
description = "WebAssembly build of TEL"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.84" }
serde-wasm-bindgen = "0.4"
tel = { path = "../tel" }
serde = "1.0.149"
serde_derive = "1.0.166"
serde_json = "1.0.91"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
