[package]
name = "tel"
version = "0.1.12"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Turbofuro Expression Language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.166"
serde_derive = "1.0.166"
serde_json = "1.0.100"
unescape = "0.1.0"
once_cell = "1.18.0"
url = "2.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.chumsky]
version = "0.9.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.chumsky]
version = "0.9.3"
default-features = false
features = ["ahash", "std"] # Removed "spill-stack"
