[package]
name = "turbofuro_runtime"
version = "0.1.7"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Runtime for Turbofuro visual programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws", "multipart"] }
chrono = "0.4.38"
hyper = { version = "1.3.1", features = ["full"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.149"
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
async-trait = "0.1.60"
reqwest = { version = "0.12.3", features = ["json", "native-tls-vendored"] }
http = "0.2.8"
async-recursion = "1.0.0"
serde_derive = "1.0.152"
tel = { path = "../tel", version = "0.1.7" }
futures-util = "0.3.25"
mime = "0.3.16"
encoding_rs = "0.8.31"
oauth2 = "4.3.0"
http-body = "1.0"
tokio-postgres = { version = "0.7.10", features = [
    "with-uuid-1",
    "with-serde_json-1",
] }
postgres-native-tls = "0.5.0"
native-tls = { version = "0.2.11", features = ["vendored"] }
redis = { version = "0.25.3", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
    "connection-manager",
] }
deadpool-redis = "0.15.0"
deadpool-postgres = "0.10.5"
dashmap = "5.4.0"
url = "2.4.0"
base64 = "0.21.2"
once_cell = "1.18.0"
jsonwebtoken = "8.3.0"
uuid = { version = "1.6.1", features = ["serde", "v4", "v7"] }
nanoid = "0.4.0"
tokio-util = "0.7.10"
wasmtime = { version = "15.0.1", features = ["all-arch"] }
wasmtime-wasi = { version = "15.0.1", features = ["tokio", "wasi-tokio"] }
wasi-common = "15.0.1"
postgres = "0.19.7"
memoize = "0.4.2"
croner = "2.0.4"
mustache = "0.9.0"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
criterion = "0.3"
