# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "turbofuro_worker"
version = "0.1.19"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
readme = "../README.md"
description = "Worker executable for Turbofuro"

[[bin]]
name = "turbofuro_worker"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "multipart"] }
turbofuro_runtime = { path = "../turbofuro_runtime", version = "0.1.14" }
chrono = "0.4.23"
hyper = { version = "1.3.1", features = ["full"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.149"
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
async-trait = "0.1.60"
reqwest = { version = "0.12.3", features = ["json", "native-tls-vendored"] }
http = "0.2.8"
async-recursion = "1.0.0"
serde_derive = "1.0.152"
futures-util = "0.3.25"
mime = "0.3.16"
encoding_rs = "0.8.31"
tower = { version = "0.4.13", features = ["util"] }
pico-args = { version = "0.5.0", features = ["eq-separator"] }
anyhow = "1.0.69"
http-body = "1.0"
tower-http = { version = "0.5", features = [
    "cors",
    "timeout",
    "compression-br",
    "compression-deflate",
    "compression-gzip",
] }
itertools = "0.10.5"
dashmap = "5.4.0"
once_cell = "1.18.0"
tokio-tungstenite = { version = "0.21.0", features = [
    "native-tls",
    "native-tls-vendored",
] }
nanoid = "0.4.0"
fastrand = "2.0.1"
hostname = "0.3.1"
moka = { version = "0.12.3", features = ["future"] }
axum-server = "0.6.0"
http-body-util = "0.1.1"
console-subscriber = "0.2.0"
tokio-stream = "0.1.15"
axum-extra = { version = "0.9.3", features = ["cookie"] }
